--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,20 @@ version: '3'
 
 services: 
 
+  nginx:
+    build: 
+      context: ./nginx
+      dockerfile: Dockerfile.node
+    container_name: nginx
+    networks: 
+      - node-network
+    ports: 
+      - "8080:80"
   app:
     build: 
       context: node
     container_name: app
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh node index.js
     networks: 
       - node-network
     volumes: 
