--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,9 @@ services:
       - node-network
     ports: 
       - "8080:80"
+    depends_on: 
+       - app
+
   app:
     build: 
       context: node
